# ledit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_debug.sh  build_macosapp.sh  build_release.sh  camera.vert  cursor.frag  cursor.h  cursor.vert  defs.h  glad.h  main.cc  main2.cc  shader.h  simple.fs  simple.vs  text.fs  utils.h
.github/workflows/: build-linux.yml  build-macos-aarch.yaml  build-macos.yaml  build-wayland.yaml  build.yml
assets/: appicon.rc  ledit.desktop  nord-theme.json  tokyo-night.json
language-syntaxes/: cmake.json  markdown.json  rust.json  sql.json  typst.json
shaders/: camera.vert  simple.vs
src/: #la.cc#  accent.cc  accent.h  base64.h  cursor.cc  cursor.h  fira_code.h  fira_code_windows.h  font_atlas.cc  font_atlas.h  glad.c  glad.h  highlighting.cc  highlighting.h  la.cc  la.h  languages.h  main.cc  providers.cc  providers.h  selection.cc  selection.h  shader.cc  shader.h  shaders.h  state.cc  state.h  u8String.h  utf8String.cc  utf8String.h  utils.cc  utils.h  vim.cc  vim.h  vim_actions.h  win32_icon_utils.h  windows.h
src/fcxit5/: dbus.cc  dbus.h  ibus.cc  ibus.h
src/vim_actions/: AAAction.cc  AAction.cc  BAction.cc  BackspaceAction.cc  BracketAction.cc  CAction.cc  CCAction.cc  ColonAction.cc  CommaAction.cc  CommentAction.cc  CtrlUAction.cc  DAction.cc  DDAction.cc  DollarAction.cc  EAction.cc  EnterAction.cc  EscapeAction.cc  FindAction.cc  Finder.cc  FontSizeAction.cc  GAction.cc  GGAction.cc  HAction.cc  IAction.cc  IIAction.cc  IndentAction.cc  JAction.cc  KAction.cc  LAction.cc  MoveAction.cc  OAction.cc  OOAction.cc  PAction.cc  ParagraphAction.cc  ParenAction.cc  PercentAction.cc  QuoteAction.cc  RAction.cc  SemicolonAction.cc  SimpleCopy.cc  (+9 more)
