cmake_minimum_required(VERSION 3.16)
project("ledit")
set(CMAKE_CXX_STANDARD 17)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(DISABLE_PACKAGE_CONFIG_AND_INSTALL ON)
set(SKIP_INSTALL_ALL ON)
set(PNG_EXECUTABLES OFF)
set(PNG_SHARED OFF)
if(CMAKE_BUILD_TYPE STREQUAL "Release" AND WIN32)
  set(CMAKE_C_FLAGS_RELEASE "-mwindows")
  add_definitions(-DLEDIT_WIN_MAIN)
  add_executable(ledit WIN32 src/glad.c src/la.cc src/main.cc)
  target_sources(ledit PRIVATE assets/appicon.rc)
else()
    if(UNIX AND NOT APPLE AND NOT GLFW_USE_WAYLAND)
        find_package(PkgConfig REQUIRED) # Include functions provided by PkgConfig module.

pkg_check_modules(DBUS REQUIRED dbus-1) # This calls pkgconfig with appropriate arguments
# Use results of pkg_check_modules() call.
include_directories(${DBUS_INCLUDE_DIRS})
link_directories(${DBUS_LIBRARY_DIRS})
        add_executable(ledit src/glad.c src/la.cc src/main.cc src/fcxit5/dbus.cc src/main.cc src/fcxit5/ibus.cc)
        target_link_libraries(ledit PRIVATE ${DBUS_LIBRARIES})
    else()
        add_executable(ledit src/glad.c src/la.cc src/main.cc)
    endif()
endif()
add_subdirectory(third-party/zlib)
set(ZLIB_LIBRARY zlibstatic)
set(ZLIB_LIBRARIES zlibstatic)
set(ZLIB_INCLUDE_DIRS  ${CMAKE_CURRENT_SOURCE_DIR}/third-party/zlib ${CMAKE_CURRENT_BINARY_DIR}/third-party/zlib)
set(ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third-party/zlib ${CMAKE_CURRENT_BINARY_DIR}/third-party/zlib)
add_subdirectory(third-party/lpng1639)
set(PNG_LIBRARIES png_static)
set(PNG_LIBRARY png_static)
set(PNG_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/third-party/lpng1639 ${CMAKE_CURRENT_BINARY_DIR}/third-party/lpng1639/)
set(PNG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third-party/lpng1639 ${CMAKE_CURRENT_BINARY_DIR}/third-party/lpng1639/)
set(PNG_PNG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third-party/lpng1639 ${CMAKE_CURRENT_BINARY_DIR}/third-party/lpng1639/)
if(UNIX AND NOT APPLE)
    if(GLFW_USE_WAYLAND)
        set(GLFW_BUILD_X11 OFF)
        set(GLFW_BUILD_WAYLAND ON)
    else()
        set(GLFW_BUILD_X11 ON)
        set(GLFW_BUILD_WAYLAND OFF)
    endif()
endif()
add_subdirectory(third-party/glfw)

set(FT_WITH_PNG ON)

add_subdirectory(third-party/freetype2)
if (NOT WIN32 AND NOT APPLE)
    target_link_libraries(ledit PUBLIC fontconfig dl)
endif()
target_link_libraries(ledit PRIVATE glfw freetype)
 
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_definitions(-DLEDIT_DEBUG)
 endif()
if(APPLE OR UNIX)
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        set(CMAKE_CXX_FLAGS_RELEASE "-O2")
    endif()
endif()